--- a/Freewin/css/css.css
+++ b/Freewin/css/css.css
@@ -62,6 +62,11 @@
     margin: auto;
 }
 
+#btn_spin{
+    font-size: 20px;
+    min-width: 130px;
+    min-height: 50px;
+}
 .center {
     text-align: center;
 }
