--- a/Freewin/css/index.css
+++ b/Freewin/css/index.css
@@ -1,8 +1,3 @@
-body{
-    background-image: url("../images/fond.png");
-    background-size:100% 100%;
-    background-repeat:no-repeat;
-}
 
 .head{
     text-align: center;
@@ -22,5 +17,33 @@ table{
 th, tr, td {
     text-align: center;
 }
+
+#popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+  }
+  
+  #videoContainer {
+    position: relative;
+  }
+  
+  #videoPlayer {
+    width: 80%;
+    height: auto;
+  }
+  
+  #closePopup {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+  }
 
 
