--- a/Freewin/css/index.css
+++ b/Freewin/css/index.css
@@ -1,5 +1,37 @@
 @import url('https://fonts.googleapis.com/css?family=Work+Sans:400,600');
 
+:root {
+  --freewin-orange: #FFA500;
+  --freewin-white: white;
+}
+
+.wrapper {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 10px;
+  grid-auto-rows: minmax(100px, auto);
+}
+
+.one {
+  grid-column: 1 / 5;
+  grid-row: 1;
+}
+
+.two {
+  grid-column: 1;
+  grid-row: 2;
+}
+
+.three {
+  grid-column: 2;
+  grid-row: 2;
+}
+
+.four {
+  grid-column: 1;
+  grid-row: 2;
+}
+
 .head{
     text-align: center;
     font-family: cursive;
@@ -61,4 +93,8 @@ th, tr, td {
     right: 10px;
   }
 
+  .alerte-paragraphe {
+    font-family: 'Work Sans', sans-serif;
+    font-weight: 300;
+  }
 
