--- a/Freewin/css/index.css
+++ b/Freewin/css/index.css
@@ -13,12 +13,12 @@
 }
 
 .one {
-  grid-column: 1 / 5;
+  grid-column: 1/5;
   grid-row: 1;
 }
 
 .two {
-  grid-column: 1;
+  grid-column: 1/5;
   grid-row: 2;
 }
 
@@ -32,12 +32,28 @@
   grid-row: 2;
 }
 
-.head{
+.game {
+  text-align: center;
+  display: inline;
+}
+
+table {
+  margin-right: auto;
+  margin-left: auto;
+}
+
+canvas {
+  width: 100%;
+  height: 100%;
+}
+
+.head {
     text-align: center;
     font-family: cursive;
     font-size: x-large;
     margin-top: 24px;
     margin-bottom: 24px;
+    width: 100%;
 }
 
 .title {
@@ -46,17 +62,26 @@
   font-weight: 300;
 }
 
+@media screen and (max-width: 600px) {
+  .title {
+    font-size: 24px;
+  }
+  .description {
+    font-size: 16px;
+  }
+}
+
 .description {
   margin: 0;
   font-family: 'Work Sans', sans-serif;
   font-weight: 300;
 }
 
-.canvas{
+.canvas {
     text-align: center;
 }
 
-table{
+table {
 	border : 2px solid rgba(255, 255, 255, 0.349);
     background-color: rgba(255, 255, 255, 0.56);
 }
@@ -76,25 +101,25 @@ th, tr, td {
     justify-content: center;
     align-items: center;
     z-index: 9999;
-  }
+}
   
-  #videoContainer {
-    position: relative;
-  }
+#videoContainer {
+  position: relative;
+}
   
-  #videoPlayer {
-    width: 100%;
-    height: auto;
-  }
+#videoPlayer {
+  width: 100%;
+  height: auto;
+}
   
-  #closePopup {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-  }
+#closePopup {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
 
-  .alerte-paragraphe {
-    font-family: 'Work Sans', sans-serif;
-    font-weight: 300;
-  }
+.alerte-paragraphe {
+  font-family: 'Work Sans', sans-serif;
+  font-weight: 300;
+}
 
