--- a/Freewin/css/index.css
+++ b/Freewin/css/index.css
@@ -37,11 +37,6 @@
   display: inline;
 }
 
-table {
-  margin-right: auto;
-  margin-left: auto;
-}
-
 canvas {
   width: 100%;
   height: 100%;
@@ -83,7 +78,25 @@ canvas {
 
 table {
 	border : 2px solid rgba(255, 255, 255, 0.349);
-    background-color: rgba(255, 255, 255, 0.56);
+  background-color: rgba(255, 255, 255, 0.56);
+  margin-right: auto;
+  margin-left: auto;
+}
+
+@media screen and (max-width: 700px) {
+  table {
+    margin-bottom: 20px;
+    height: 300px;
+  }
+  td {
+    display: block;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  td {
+    display: block;
+  }
 }
 
 th, tr, td {
