--- a/Freewin/css/css.css
+++ b/Freewin/css/css.css
@@ -1,6 +1,7 @@
 :root {
     --freewin-orange: #FFA500;
     --freewin-white: white;
+    --freewin-black:black;
 }
 
 .box {
@@ -40,18 +41,19 @@
 
 .btn.btn-tag.active {
     background-color: var(--freewin-orange);
-    color: var(--freewin-white);
+    color: var(--freewin-black);
+    border-color: var(--freewin-orange);
 }
 
 .btn.btn-tag {
     background-color: var(--freewin-white);
-    color: var(--freewin-orange);
+    color: var(--freewin-black);
     padding:10px;
     margin:65px;
     border-radius: 100px;
     min-width: 180px;
     min-height: 20px;
-    border-color: var(--freewin-orange);
+    border-color: var(--freewin-whitewin-orange);
     text-align: center;
 }
 
